--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              <h1> Om Babar.</h1>
              <h3>I'm 17 years old from Mumbai. </h3>
                <h3> I am designer and currently learning full stack development.</h3>
-                <h3>This is going to be my workspace for programming as well as some art,You can see all my upcoming projects</h3>
+                <h3>This is going to be my workspace for programming as well as some art,where you can see all my upcoming projects</h3>
                 <h3>To Have a look at my instagram profile for some cool design stuff click <a class="link-color" href="https://www.instagram.com/ombabar.x/"> here</h3></a>
             </div>
             
